infrastructure/waddle.cloud/gitops/livekit-sfu/httproute-http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: livekit-sfu-http-redirect
  namespace: livekit
spec:
  parentRefs:
    - name: waddle-gateway
      namespace: default
      sectionName: http-sfu
  hostnames:
    - sfu.waddle.social
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
