infrastructure/waddle.cloud/gitops/livekit-sfu/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: livekit-sfu
  namespace: livekit
spec:
  parentRefs:
    - name: waddle-gateway
      namespace: default
      sectionName: https-sfu
  hostnames:
    - sfu.waddle.social
  rules:
    - backendRefs:
        - name: livekit-sfu
          port: 7880
